# agent-probe

./: .gitignore  LICENSE  README.md  langchain-real-report.sarif  pyproject.toml
.github/workflows/: ci.yml
examples/: example_ci.py  example_function.py  example_langchain.py  example_langchain_real.py
src/agent_probe/: __init__.py  canary.py  cli.py  engine.py  models.py  probe_base.py  registry.py  reporter.py  sarif.py  scoring.py
src/agent_probe/probes/: __init__.py  agent_injection.py  boundary_abuse.py  confused_deputy.py  data_exfiltration.py  input_validation.py  memory_poisoning.py  prompt_leakage.py  resource_abuse.py  tool_misuse.py
src/agent_probe/targets/: __init__.py  base.py  function.py  http.py
tests/: conftest.py  mock_handlers.py  mock_handlers_leakage.py  mock_handlers_validation.py  mock_server.py  test_canary.py  test_function_target.py  test_integration_cli.py  test_integration_deputy.py  test_integration_http.py  test_integration_leakage.py  test_integration_memory.py  test_integration_pipeline.py  test_integration_resource.py  test_integration_secure.py  test_integration_validation.py  test_integration_vulnerable.py  test_models.py  test_reporter.py  test_sarif.py  test_scoring.py
