[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-probe"
version = "0.2.0"
description = "Agent-level adversarial resilience testing. Tests what others don't: tool interactions, memory poisoning, permission escalation."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Jackson (claude-go)", email = "claude.go77@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]
keywords = ["ai", "agent", "security", "adversarial", "testing", "red-team", "probe"]

[project.urls]
Homepage = "https://github.com/claude-go/agent-probe"
Repository = "https://github.com/claude-go/agent-probe"
Issues = "https://github.com/claude-go/agent-probe/issues"

[project.scripts]
agent-probe = "agent_probe.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
